<resources>
    <string name="app_name">ClubDeportivo</string>
    <string name="btn_connect_text">Conectar</string>
    <string name="profile_image_description">Profile Image</string>
    <string name="title_connect_database">Conectar Base de datos</string>
    <string name="label_server">Servidor</string>
    <string name="hint_localhost">Localhost</string>
    <string name="label_port">Puerto</string>
    <string name="hint_port">3306</string>
    <string name="label_database">Base de datos</string>
    <string name="hint_database">CentroDeportivo</string>
    <string name="label_username">Usuario</string>
    <string name="hint_username">Admin</string>
    <string name="label_password">Contraseña</string>
    <string name="hint_password">********</string>
    <string name="description_text">Este es un proyecto hecho por alumnos de la tecnicatura como proyecto de una aplicación móvil para un club deportivo. Todos los derechos reservados.</string>
    <string name="accept_button_text">Aceptar</string>
    <string name="button_volver_formulario">Volver al formulario</string>
    <string name="button_continuar">Continuar</string>
    <string name="titulo_credenciales_invalidas">Credenciales Invalidas</string>
    <string name="titulo_error_login">Error en Iniciar Sesión</string>
    <string name="mensaje_error_login">Usuario y/o contraseña\nson incorrectos</string>
    <string name="mensaje_credenciales_incorrectas">Vuelva a intentarlo</string>
    <string name="titulo_conexion_exitosa">Conexión Exítosa</string>
    <string name="mensaje_continuarConexion">Para continuar preciona el botón</string>
    <string name="titulo_loginCorrecto">Inicio de sesión correcto</string>
    <string name="button_imprimir_formulario">IMPRIMIR FORMULARIO\nPDF de inscripción</string>
    <string name="button_nuevo_socio">NUEVO SOCIO\nDar de alta</string>
    <string name="button_consultar_vencimiento">CONSULTAR\nVencimientos</string>
    <string name="button_nuevo_pago">NUEVO PAGO\nIngresar pago</string>
    <string name="button_nueva_actividad">ACTIVIDADES\nAlta o Inscribir</string>
    <string name="button_imprimir_carnet">IMPRIMIR CARNET\nPDF de carnet de socio</string>
    <string name="button_imp_carnet">Imprimir Carnet</string>
    <string name="menu">menu</string>
    <string name="profile">profile\n</string>
    <string name="vencimientos">Vencimientos</string>
    <string name="this_is_a_short_explanation_about_the_new_feature_of_the_app">this is a short explanation about the new feature of the app</string>
</resources>