<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".conectar_DB">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/icon_db"
        android:scaleType="centerCrop"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/profile_image_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_connect_database"
        style="@style/TitlePrimary"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>


    <TextView
        android:id="@+id/edit_server_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_server"
        android:textSize="20sp"
        android:textColor="@color/gris"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>


    <EditText
        android:id="@+id/edit_server"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/gris"
        android:hint="@string/hint_localhost"
        android:inputType="textUri"
        android:autofillHints="@null"
        android:textColorHint="@color/gris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_server_label" />


    <TextView
        android:id="@+id/edit_port_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_port"
        android:textSize="20sp"
        android:textColor="@color/gris"
        app:layout_constraintTop_toBottomOf="@id/edit_server"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/edit_port"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@android:color/white"
        android:hint="@string/hint_port"
        android:inputType="number"
        android:autofillHints="@null"
        android:minHeight="48dp"
        android:paddingVertical="8dp"
        android:textColorHint="@color/gris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_port_label"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/edit_database_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_database"
        android:textSize="20sp"
        android:textColor="@color/gris"
        app:layout_constraintTop_toBottomOf="@id/edit_port"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/edit_database"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/hint_database"
        android:backgroundTint="@color/gris"
        android:textColorHint="@color/gris"
        android:autofillHints="@null"
        android:inputType="textUri"
        app:layout_constraintTop_toBottomOf="@id/edit_database_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"/>

    <TextView
        android:id="@+id/edit_username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_username"
        android:textSize="20sp"
        android:textColor="@color/gris"
        app:layout_constraintTop_toBottomOf="@id/edit_database"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:backgroundTint="@color/gris"
        android:textColorHint="@color/gris"
        android:minHeight="48dp"
        android:paddingVertical="8dp"
        android:inputType="text"
        android:autofillHints="username"
        app:layout_constraintTop_toBottomOf="@id/edit_username_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"/>

    <TextView
        android:id="@+id/edit_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_password"
        android:textSize="20sp"
        android:textColor="@color/gris"
        app:layout_constraintTop_toBottomOf="@id/edit_username"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:backgroundTint="@color/gris"
        android:textColorHint="@color/gris"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:minHeight="48dp"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/edit_password_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"/>

    <Button
        android:id="@+id/btn_connect"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="28dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/btn_connect_text"
        style="@style/ButtonPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_password" />

</androidx.constraintlayout.widget.ConstraintLayout>
